выполняет шаг3, шаг4, шаг5

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/Mira1702/goit-node_js-hw-01#readme",
   "dependencies": {
+    "commander": "^7.2.0",
     "nodemon": "^2.0.7",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "yargs": "^17.0.1"
   }
 }
